deleteOne method modified